Tweaked configure.ac and Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 ACLOCAL_AMFLAGS=-I m4
 
 main_PROGRAMS = main
-maindir = src
+maindir = @abs_top_builddir@/src
 main_SOURCES = \
 	src/radix_tree.c \
+	src/radix_tree.h \
 	src/main.c
