--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.69])
-AC_INIT(min-max-heap, 0.1)
+AC_PREREQ([2.64])
+AC_INIT(radix-tree, 0.1)
 AC_CONFIG_SRCDIR([src/radix_tree.c])
 AC_CONFIG_HEADERS([config.h])
 LT_INIT
@@ -14,16 +14,14 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 
 # Checks for libraries.
-# FIXME: Replace `main' with a function in `-lm':
 AC_CHECK_LIB([m], [log2])
 
 AM_INIT_AUTOMAKE([subdir-objects])
 
 # Checks for header files.
-AC_CHECK_HEADERS([stdint.h stdlib.h string.h])
+AC_CHECK_HEADERS([stdint.h stdlib.h string.h stdbool.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
-AC_CHECK_HEADER_STDBOOL
 AC_TYPE_UINT32_T
 
 # Checks for library functions.
